--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -238,6 +238,39 @@
     </div>
 
     <script>
+        
+async function storeGameResult() {
+    try {
+        const button = document.getElementById('store-result-button');
+        button.disabled = true;
+        button.innerHTML = '<div class="loading"></div> Storing...';
+
+        showStatus('Please confirm the transaction in your wallet...', 'info');
+
+        // Call the smart contract directly without getting a signature from the backend
+        const tx = await gameContract.storeGameResult(
+            gameData.symbols.join(''),
+            gameData.rarity,
+            gameId
+        );
+
+        showStatus('Transaction submitted. Waiting for confirmation...', 'info');
+        showTransactionLink(tx.hash);
+
+        await tx.wait();
+
+        showStatus('Game result stored successfully!', 'success');
+        button.classList.add('hidden');
+        document.getElementById('mint-button').classList.remove('hidden');
+
+    } catch (error) {
+        console.error('Error storing game result:', error);
+        showStatus(`Error: ${error.message}`, 'error');
+        button.disabled = false;
+        button.innerHTML = '1. Store Game Result';
+    }
+}
+
         // Configuration - these would come from environment variables in production
         const CONFIG = {
             GAME_CONTRACT_ADDRESS: '0x...', // Replace with actual deployed address
